build/turtle-parser.output
Terminaux inutilisés dans la grammaire

   "name"


Grammaire

    0 $accept: unit $end

    1 unit: cmds

    2 cmds: cmd cmds
    3     | %empty

    4 cmd: "up"
    5    | "down"
    6    | "forward" expr
    7    | "backward" expr
    8    | "print" expr
    9    | "right" expr
   10    | "left" expr
   11    | "heading" expr
   12    | "color" expr
   13    | "position" expr expr

   14 expr_literal: "value"

   15 expr_primary: expr_literal

   16 expr: expr_primary


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
"value" (258) 14
"name" (259)
"up" (260) 4
"down" (261) 5
"forward" (262) 6
"backward" (263) 7
"print" (264) 8
"right" (265) 9
"left" (266) 10
"heading" (267) 11
"color" (268) 12
"position" (269) 13


Non-terminaux, suivis des règles où ils apparaissent

$accept (15)
    à gauche: 0
unit (16)
    à gauche: 1, à droite: 0
cmds (17)
    à gauche: 2 3, à droite: 1 2
cmd (18)
    à gauche: 4 5 6 7 8 9 10 11 12 13, à droite: 2
expr_literal (19)
    à gauche: 14, à droite: 15
expr_primary (20)
    à gauche: 15, à droite: 16
expr (21)
    à gauche: 16, à droite: 6 7 8 9 10 11 12 13


État 0

    0 $accept: . unit $end

    "up"        décalage et aller à l'état 1
    "down"      décalage et aller à l'état 2
    "forward"   décalage et aller à l'état 3
    "backward"  décalage et aller à l'état 4
    "print"     décalage et aller à l'état 5
    "right"     décalage et aller à l'état 6
    "left"      décalage et aller à l'état 7
    "heading"   décalage et aller à l'état 8
    "color"     décalage et aller à l'état 9
    "position"  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 3 (cmds)

    unit  aller à l'état 11
    cmds  aller à l'état 12
    cmd   aller à l'état 13


État 1

    4 cmd: "up" .

    $défaut  réduction par utilisation de la règle 4 (cmd)


État 2

    5 cmd: "down" .

    $défaut  réduction par utilisation de la règle 5 (cmd)


État 3

    6 cmd: "forward" . expr

    "value"  décalage et aller à l'état 14

    expr_literal  aller à l'état 15
    expr_primary  aller à l'état 16
    expr          aller à l'état 17


État 4

    7 cmd: "backward" . expr

    "value"  décalage et aller à l'état 14

    expr_literal  aller à l'état 15
    expr_primary  aller à l'état 16
    expr          aller à l'état 18


État 5

    8 cmd: "print" . expr

    "value"  décalage et aller à l'état 14

    expr_literal  aller à l'état 15
    expr_primary  aller à l'état 16
    expr          aller à l'état 19


État 6

    9 cmd: "right" . expr

    "value"  décalage et aller à l'état 14

    expr_literal  aller à l'état 15
    expr_primary  aller à l'état 16
    expr          aller à l'état 20


État 7

   10 cmd: "left" . expr

    "value"  décalage et aller à l'état 14

    expr_literal  aller à l'état 15
    expr_primary  aller à l'état 16
    expr          aller à l'état 21


État 8

   11 cmd: "heading" . expr

    "value"  décalage et aller à l'état 14

    expr_literal  aller à l'état 15
    expr_primary  aller à l'état 16
    expr          aller à l'état 22


État 9

   12 cmd: "color" . expr

    "value"  décalage et aller à l'état 14

    expr_literal  aller à l'état 15
    expr_primary  aller à l'état 16
    expr          aller à l'état 23


État 10

   13 cmd: "position" . expr expr

    "value"  décalage et aller à l'état 14

    expr_literal  aller à l'état 15
    expr_primary  aller à l'état 16
    expr          aller à l'état 24


État 11

    0 $accept: unit . $end

    $end  décalage et aller à l'état 25


État 12

    1 unit: cmds .

    $défaut  réduction par utilisation de la règle 1 (unit)


État 13

    2 cmds: cmd . cmds

    "up"        décalage et aller à l'état 1
    "down"      décalage et aller à l'état 2
    "forward"   décalage et aller à l'état 3
    "backward"  décalage et aller à l'état 4
    "print"     décalage et aller à l'état 5
    "right"     décalage et aller à l'état 6
    "left"      décalage et aller à l'état 7
    "heading"   décalage et aller à l'état 8
    "color"     décalage et aller à l'état 9
    "position"  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 3 (cmds)

    cmds  aller à l'état 26
    cmd   aller à l'état 13


État 14

   14 expr_literal: "value" .

    $défaut  réduction par utilisation de la règle 14 (expr_literal)


État 15

   15 expr_primary: expr_literal .

    $défaut  réduction par utilisation de la règle 15 (expr_primary)


État 16

   16 expr: expr_primary .

    $défaut  réduction par utilisation de la règle 16 (expr)


État 17

    6 cmd: "forward" expr .

    $défaut  réduction par utilisation de la règle 6 (cmd)


État 18

    7 cmd: "backward" expr .

    $défaut  réduction par utilisation de la règle 7 (cmd)


État 19

    8 cmd: "print" expr .

    $défaut  réduction par utilisation de la règle 8 (cmd)


État 20

    9 cmd: "right" expr .

    $défaut  réduction par utilisation de la règle 9 (cmd)


État 21

   10 cmd: "left" expr .

    $défaut  réduction par utilisation de la règle 10 (cmd)


État 22

   11 cmd: "heading" expr .

    $défaut  réduction par utilisation de la règle 11 (cmd)


État 23

   12 cmd: "color" expr .

    $défaut  réduction par utilisation de la règle 12 (cmd)


État 24

   13 cmd: "position" expr . expr

    "value"  décalage et aller à l'état 14

    expr_literal  aller à l'état 15
    expr_primary  aller à l'état 16
    expr          aller à l'état 27


État 25

    0 $accept: unit $end .

    $défaut  accepter


État 26

    2 cmds: cmd cmds .

    $défaut  réduction par utilisation de la règle 2 (cmds)


État 27

   13 cmd: "position" expr expr .

    $défaut  réduction par utilisation de la règle 13 (cmd)
